--- a/activebox/index.html
+++ b/activebox/index.html
@@ -28,7 +28,7 @@
     </div>
 </header>
 
-    
+
 <!--Intro-->
 <div class="intro">
     <div class="container">
@@ -39,5 +39,14 @@
         </div>
     </div>
 </div>
+
+<div class="container">
+    <audio controls>
+        <source src="horse.ogg" type="audio/ogg">
+        <source src="survival.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+</div>
+
 </body>
 </html>
